<resources>
    <string name="app_name">My App Portfolio</string>
    <string name="my_nanodegree_apps">My Nanodegree Apps!</string>
    <string name="port_first_btn">SPOTIFY STREAMER</string>
    <string name="port_second_btn">SCORES APP</string>
    <string name="port_third_btn">LIBRARY APP</string>
    <string name="port_fourth_btn">BUILD IT BIGGER</string>
    <string name="port_fifth_btn">XYZ READER</string>
    <string name="port_capstone_btn">CAPSTONE:MY OWN APP</string>
    <string name="setting">setting</string>
</resources>
