<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical">

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?attr/colorPrimary"
            android:minHeight="?attr/actionBarSize"
            android:theme="@style/Toolbar"
            app:popupTheme="@style/ThemeOverlay.AppCompat.Light" />
    </android.support.design.widget.AppBarLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:text="@string/my_nanodegree_apps"
        android:textColor="@color/colorTitle"
        android:textSize="20sp" />

    <Button
        android:id="@+id/btn_first_port"
        style="@style/PortBtnBackground"
        android:layout_width="@dimen/port_button_width"
        android:layout_height="@dimen/port_button_height"
        android:layout_marginTop="30dp"
        android:text="@string/port_first_btn" />

    <Button
        android:id="@+id/btn_second_port"
        style="@style/PortBtnBackground"
        android:layout_width="@dimen/port_button_width"
        android:layout_height="@dimen/port_button_height"
        android:layout_marginTop="10dp"
        android:text="@string/port_second_btn" />

    <Button
        android:id="@+id/btn_third_port"
        style="@style/PortBtnBackground"
        android:layout_width="@dimen/port_button_width"
        android:layout_height="@dimen/port_button_height"
        android:layout_marginTop="10dp"
        android:text="@string/port_first_btn" />

    <Button
        android:id="@+id/btn_fourth_port"
        style="@style/PortBtnBackground"
        android:layout_width="@dimen/port_button_width"
        android:layout_height="@dimen/port_button_height"
        android:layout_marginTop="10dp"
        android:text="@string/port_fourth_btn" />

    <Button
        android:id="@+id/btn_fifth_port"
        style="@style/PortBtnBackground"
        android:layout_width="@dimen/port_button_width"
        android:layout_height="@dimen/port_button_height"
        android:layout_marginTop="10dp"
        android:text="@string/port_fifth_btn" />

    <Button
        android:id="@+id/btn_capstone"
        android:layout_width="@dimen/port_button_width"
        android:layout_height="@dimen/port_button_height"
        android:layout_marginTop="10dp"
        android:background="@color/colorDesBackground"
        android:text="@string/port_capstone_btn"
        android:textColor="@android:color/white"
        android:textSize="14sp" />
</LinearLayout>
